update swagger, schema and create lit mappers
add some tests

add upload service

update documentation

try to tests the quart-openapi

add dispatch-portal to tf and pipeline

refactor and tests dispatch portal

rename microservice to dispatch-portal-backend

update config dispatch portal backend

check file size dispatch portal backend

reformat swagger default value

revert api_server.py change

remove code based on reviews

update swagger to allow upload file api call to accept dispatch number

dispatch portal backend and lit bridge deal with SalesForce Exceptions

update infra for dispatch portal backend and lit bridge

dispach detail styles

Add docker build changes

Upload files in progress

Adapters

Change folder

Add infra changes for dispatch-portal-frontend microservice

fix nginx redirections

Config env and basepath for routes

Simple config mocks var

Config mocks and init integration

Add all ECR repositories to avoid conflicts in deployment
