# dispatch-portal-frontend/config/routes.js
@@ -1,0 +1,8 @@
+import { config } from './config';
+
+export const Routes = {
+  BASE: () => `${config.basePath}`,
+  DISPATCH: () => `${config.basePath}dispatch`,
+  NEW_DISPATCH: () => `${config.basePath}new-dispatch`,
+  LOGIN: () => `${config.basePath}login`
+};
